# word2vec

./: .gitignore  README.md  config.yaml  dataxd.ipynb  main.py  pyproject.toml  word2deriv.ipynb  word2plot.ipynb  word2test.ipynb  word2vec.ipynb
.ipynb_checkpoints/: main-checkpoint.py  word2vec-checkpoint.ipynb
src/: config.py  dataset.py  model.py  tokenizer.py  trainer.py  utils.py
